Changelog
=========

1.3-dev - (unreleased)
----------------

1.2 (2010-02-24)
----------------
* Fixed stinky egg. [ghicale]

1.1 (2010-02-24)
----------------
* #2685 Fix layout in edit mode [voineali]


1.0 (2009-11-09)
----------------
* Initial release