@@ -1,5 +1,6 @@
 try:
     import zope.annotation
+    zope.annotation
 except ImportError:
     #BBB Plone 2.5
     from os.path import dirname
