@@ -1,6 +1,6 @@
 from zope.interface import implements
 from eea.google.api import Connection
-from interfaces import IGoogleAnalyticsConnection
+from eea.google.analytics.interfaces import IGoogleAnalyticsConnection
 
 class GoogleAnalyticsConnection(object):
     """ Access Google Analytics
